<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondaryDarkColor"
    tools:context=".ui.detail.DetailFragment">

    <TextView
        android:id="@+id/tvCityName"
        style="@style/TextAppearance.MaterialComponents.Subtitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20sdp"
        android:drawablePadding="@dimen/_2sdp"
        android:textColor="#263238"
        android:textSize="@dimen/_18ssp"
        app:drawableStartCompat="@drawable/ic_location"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Lagos," />

    <TextView
        android:id="@+id/tvCountryName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_4sdp"
        android:textColor="@color/primaryTextColor"
        android:textSize="@dimen/_8ssp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="@id/tvCityName"
        app:layout_constraintStart_toEndOf="@id/tvCityName"
        tools:text="NG" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_16sdp"
        android:padding="@dimen/_8sdp"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="@id/tvCityName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvCityName"
        tools:text="may 28, 2020" />

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/ivWeatherIcon"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCityName"
        tools:src="@color/black" />

    <TextView
        android:id="@+id/tvTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:textSize="@dimen/_28ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/ivWeatherIcon"
        app:layout_constraintStart_toStartOf="@id/ivWeatherIcon"
        app:layout_constraintTop_toBottomOf="@id/ivWeatherIcon"
        tools:text="79C" />

    <TextView
        android:id="@+id/tvDescription"
        style="@style/TextAppearance.Material3.TitleMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="@id/tvTemp"
        app:layout_constraintStart_toStartOf="@id/tvTemp"
        app:layout_constraintTop_toBottomOf="@id/tvTemp"
        tools:text="overcast clouds" />

    <View
        android:id="@+id/viewBackground"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="@drawable/forecast_item_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDescription" />


    <TextView
        android:id="@+id/tvWeatherDetailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_4sdp"
        android:text="@string/weather_details_label"
        android:textColor="#37474F"
        app:layout_constraintBottom_toBottomOf="@id/ivDetails"
        app:layout_constraintStart_toEndOf="@id/ivDetails"
        app:layout_constraintTop_toTopOf="@id/ivDetails" />

    <ImageView
        android:id="@+id/ivDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:contentDescription="@string/detail_icon"
        android:src="@drawable/ic_details"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDescription" />


    <View
        android:id="@+id/detailView"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_4sdp"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/ivDetails"
        app:layout_constraintStart_toStartOf="@id/ivDetails"
        app:layout_constraintTop_toBottomOf="@id/ivDetails" />



    <TextView
        android:id="@+id/tvFeelsLikeLabel"
        style="@style/label_style"
        android:text="@string/feels_like_label"
        android:textColor="#455A64"
        app:layout_constraintStart_toStartOf="@id/tvWeatherDetailLabel"
        app:layout_constraintTop_toBottomOf="@id/tvWeatherDetailLabel" />

    <TextView
        android:id="@+id/tvFeelsLike"
        style="@style/info_style"
        app:layout_constraintBottom_toBottomOf="@id/tvFeelsLikeLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvFeelsLikeLabel"
        tools:text="27.90C" />

    <TextView
        android:id="@+id/tvPressureLabel"
        style="@style/label_style"
        android:text="@string/pressure_label"
        android:textColor="#455A64"
        app:layout_constraintStart_toStartOf="@id/tvFeelsLikeLabel"
        app:layout_constraintTop_toBottomOf="@id/tvFeelsLikeLabel" />

    <TextView
        android:id="@+id/tvPressure"
        style="@style/info_style"
        app:layout_constraintBottom_toBottomOf="@id/tvPressureLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvPressureLabel"
        tools:text="1008hPa" />

    <TextView
        android:id="@+id/tvHumidityLabel"
        style="@style/label_style"
        android:text="@string/humidity_label"
        android:textColor="#455A64"
        app:layout_constraintStart_toStartOf="@id/tvPressureLabel"
        app:layout_constraintTop_toBottomOf="@id/tvPressureLabel" />

    <TextView
        android:id="@+id/tvHumidity"
        style="@style/info_style"
        app:layout_constraintBottom_toBottomOf="@id/tvHumidityLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvHumidityLabel"
        tools:text="14%" />

    <TextView
        android:id="@+id/tvWindLabel"
        style="@style/label_style"
        android:text="@string/wind_label"
        android:textColor="#455A64"
        app:layout_constraintStart_toStartOf="@id/tvHumidityLabel"
        app:layout_constraintTop_toBottomOf="@id/tvHumidityLabel" />

    <TextView
        android:id="@+id/tvWind"
        style="@style/info_style"
        app:layout_constraintBottom_toBottomOf="@id/tvWindLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvWindLabel"
        tools:text="14m/s" />

</androidx.constraintlayout.widget.ConstraintLayout>